Login & Register Form

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,14 @@ nav ul{
 li > a{
   text-decoration: none;
 }
+.loginForm .registerForm{
+  border: 1px solid black;
+  width: 25%;
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%,-30%);
+}
+button{
+  margin: 20px;
+}
